Fix responsiveness on smaller devices

--- a/app/assets/stylesheets/partials/_bento.scss
+++ b/app/assets/stylesheets/partials/_bento.scss
@@ -16,12 +16,6 @@
 	margin-left: 3%;
 }
 
-.bento_compartment {
-	margin: 0 15px !important;
-	padding: 0;
-	width: 22%;
-	}
-
 .bento_compartment h2 {
 		background-color: #CECED0;
 		border-radius: 10px 10px 0 0;
@@ -118,5 +112,5 @@
 }
 
 .bento-results {
-	margin-left: 40px;
+	margin: 0 5%;
 }
